<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">

    <AbsoluteLayout
        android:layout_width="380dp"
        android:layout_height="223dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/departamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="18dp"
            android:layout_y="13dp"
            android:text="@string/departamento" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_x="19dp"
            android:layout_y="62dp"
            android:text="@string/tipo" />

        <TextView
            android:id="@+id/municipio"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_x="19dp"
            android:layout_y="38dp"
            android:text="@string/municipio" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_x="19dp"
            android:layout_y="85dp"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_x="19dp"
            android:layout_y="109dp"
            android:text="@string/direccion" />

        <TextView
            android:id="@+id/tv_departamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="124dp"
            android:layout_y="14dp" />

        <TextView
            android:id="@+id/tv_municipio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="124dp"
            android:layout_y="39dp" />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_x="18dp"
            android:layout_y="133dp"
            android:text="@string/telefono" />

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="125dp"
            android:layout_y="63dp" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="124dp"
            android:layout_y="86dp" />

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="124dp"
            android:layout_y="109dp" />

        <TextView
            android:id="@+id/tv_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="124dp"
            android:layout_y="133dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="127dp"
            android:layout_height="41dp"
            android:layout_x="122dp"
            android:layout_y="169dp"
            card_view:srcCompat="@mipmap/ic_launcher" />

    </AbsoluteLayout>
</android.support.v7.widget.CardView>

